<resources>
    <string name="app_name">Diaryku</string>
    <string name="Catatan">Diary</string>
    <string name="Tambah_catatan">Tambah Catatan</string>
    <string name="judul">Judul</string>
    <string name="Keterangan">Keterangan</string>
    <string name="judul1">Judul</string>
    <string name="bagikan">Bagikan</string>
    <string name="histori">Histori</string>
    <string name="judul_tambah">Tambah Catatan</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="about">Diary adalah sebuah jurnal pribadi di mana seseorang dapat mencatat dan merekam pengalaman, perasaan, pemikiran, dan kejadian sehari-hari. Biasanya, diary digunakan sebagai
        sarana untuk mencatat momen penting, refleksi diri, dan
        mengungkapkan emosi secara pribadi. </string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="jdl_x">Judul: %1s \nKeterangan: %2s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="bagikan_template">Judul: %1s \nKeterangan: %2s</string>
    <string name="konfirmasi_hapus_satu">Konfirmasi Hapus </string>
    <string name="btnDlt">Hapus</string>
    <string name="diary">Artikel</string>
    <string name="koneksi">Koneksi Error</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>


    <string name="notif_title">Ada yang baru Nih !</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>

</resources>